--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
             cursor: pointer;
         }
         </style>
-        <title>React App</title>
+        <title>MyTube</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
